# altanalyze3

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  Dockerfile  Hs_Ensembl_Protein__91_38.txt  README.dev.md  README.md  pyproject.toml  requirements.txt  setup.py
altanalyze3/: __main__.py
altanalyze3/.claude/: settings.json
altanalyze3/bam_to_bed/: README.md
altanalyze3/components/: .dockerignore  .gitignore  AltAnalyze3_LongRead_Pipeline.md  splice_event.py
altanalyze3/utilities/: api.py  constants.py  helpers.py  io.py  logger.py  parser.py  parser.py.tpmbak  sort_junctions.py
cwls/tools/: altanalyze-aggregate.cwl  altanalyze-intcount.cwl  altanalyze-juncount.cwl
cwls/workflows/: altanalyze-count.cwl
doc/: proteindnannotation.xml
docs/: Hs_ProteinCoordinates_build_100_38.csv  README.md  approximate_umap.md  cellHarmony.md  cellHarmony_differential.md  conf.py  exonReference.csv  index.rst  installation.rst  quickstart.rst
docs/examples/: junction_bed.csv
docs/tutorials/: long_read_analysis.rst  preprocessing.rst
src/SQLinterface/: SQLinterface.py
src/annotation/: ensembl_biomart.py  ensemble_biomart.py  proteindomainannotation.py
test/: README.md  run_unit_tests_in_docker.sh
tests/: README.md  cwl_tests.sh  cwl_tests_in_docker.sh  data_for_tests.sh  e2e_tests.sh  e2e_tests_in_docker.sh  fetch_data_for_tests.sh  prepare_data_for_tests.sh  test_flask_pipeline.py  unit_tests.sh  unit_tests_in_docker.sh  wdl_tests.sh  wdl_tests_in_docker.sh
wdls/: altanalyze-aggregate.wdl  altanalyze-intcount.wdl  altanalyze-juncount.wdl
(+586 files in other folders)
