[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AltAnalyze3"
version = "0.1.2"
description = "AltAnalyze3: Advanced RNA-Seq Analysis Workflow"
authors = [{ name = "AltAnalyze", email = "altanalyze@gmail.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "aiofiles==24.1.0",
    "anndata==0.10.9",
    "Bio==1.7.1",
    "biopython>=1.84",
    "future==1.0.0",
    "h5py==3.10.0",
    "joblib==1.3.2",
    "matplotlib==3.6.2",
    "nimfa==1.4.0",
    "numpy==1.23.5",
    "pandas==1.5.2",
    "pysam==0.22.0",
    "pytest==8.3.3",
    "requests==2.32.3",
    "scanpy==1.10.3",
    "scikit-learn==1.3.2",
    "scipy==1.14.1",
    "setuptools==68.2.2",
    "statsmodels==0.14.0",
    "tqdm==4.62.3"
]

[tool.setuptools.packages.find]
where = ["."]
